# cuda-portfolio-optimizer

./: .gitignore  CLAUDE.md  CMakeLists.txt  README.md  ROADMAP.md  STATUS.md
apps/: CMakeLists.txt  backtest_main.cpp  optimize_main.cpp
benchmarks/: CMakeLists.txt  bench_admm.cpp  bench_cvar.cpp  bench_factor_model.cpp  bench_monte_carlo.cpp
config/: backtest_5asset.json  backtest_factor.json  backtest_sp500.json  backtest_sp500_50.json  backtest_sp500_50_lw.json  optimize_5asset.json  optimize_factor.json  optimize_sp500.json  optimize_sp500_50.json  optimize_sp500_50_lw.json
scripts/: download_data.py  generate_sample_data.py  plot_backtest.py  plot_frontier.py  requirements.txt  validate_cvxpy.py
src/: CMakeLists.txt
src/backtest/: backtest_config.cpp  backtest_config.h  backtest_engine.cpp  backtest_engine.h  strategy.cpp  strategy.h  transaction_costs.cpp  transaction_costs.h
src/constraints/: constraint_set.cpp  constraint_set.h
src/core/: types.h
src/data/: csv_loader.cpp  csv_loader.h  market_data.h  returns.cpp  returns.h  universe.cpp  universe.h
src/models/: factor_model.cpp  factor_model.h  factor_monte_carlo.cu  factor_monte_carlo.h  shrinkage_estimator.cpp  shrinkage_estimator.h  tiled_scenario_generator.cu  tiled_scenario_generator.h
src/optimizer/: admm_buffers.cuh  admm_kernels.cu  admm_kernels.h  admm_solver.cpp  admm_solver.h  anderson_acceleration.cpp  anderson_acceleration.h  efficient_frontier.cpp  efficient_frontier.h  line_search.cpp  line_search.h  objective.cpp  objective.h  optimize_config.cpp  optimize_config.h  projections.cpp  projections.h
src/reporting/: report_writer.cpp  report_writer.h
src/risk/: component_cvar.cu  component_cvar.h  cvar.cu  cvar.h  device_vector.cu  device_vector.h  portfolio_loss.cu  portfolio_loss.h  risk_result.h
src/simulation/: cholesky_utils.cpp  cholesky_utils.h  curand_states.cuh  monte_carlo.cu  monte_carlo.h  scenario_matrix.cu  scenario_matrix.h
src/utils/: cuda_utils.cu  cuda_utils.h  timer.h
tests/: CMakeLists.txt  test_admm_solver.cpp  test_anderson_acceleration.cpp  test_backtest.cpp  test_component_cvar.cpp  test_constraints.cpp  test_convergence.cpp  test_data.cpp  test_factor_model.cpp  test_line_search.cpp  test_monte_carlo.cpp  test_projections.cpp  test_risk.cpp  test_shrinkage.cpp  test_smoke.cpp  test_validation.cpp
tests/data/: backtest_config.json  prices_2asset.csv  prices_5asset.csv  prices_missing.csv  universe_test.json
